# mpris-bridge

./: .gitignore  LICENSE  README.md  TODO.md
.config/mpris-bridge/: config.toml
.github/workflows/: release.yml
.local/src/mpris-bridged/: Cargo.toml
docs/: ARCHITECTURE-ru.md  ARCHITECTURE.md
examples/eww/: media.fragment.yuck
examples/waybar/: media.fragment.jsonc
scripts/: install-from-release.sh
src/: main.rs
